--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ body {
   height: 100vh;
   background-color: #111;
   display: flex;
+  flex-direction: column;
+  gap: 5rem;
   justify-content: center;
   align-items: center;
 }
@@ -191,4 +193,19 @@ img {
     height: 110px;
     top: 20px;
   }
+
+  footer {
+    font-size: 0.75rem;
+  }
+}
+
+footer {
+  background-color: #333;
+  padding: 2rem;
+  border-radius: 2rem;
+  color: white;
+}
+
+footer a {
+  color: black;
 }
